made suitable for jenkins enviroment. master profile is out of action due to cluster package changes. todo:we can revert these changes for healthy release process.