@@ -31,13 +31,14 @@
         <maven.source.plugin.version>2.2.1</maven.source.plugin.version>
         <maven.bundle.plugin.version>2.3.7</maven.bundle.plugin.version>
         <maven.jar.plugin.version>2.4</maven.jar.plugin.version>
-        <hazelcast.version>3.7-SNAPSHOT</hazelcast.version>
+        <hazelcast.version>3.6</hazelcast.version>
         <junit.version>4.12</junit.version>
         <mockito.version>1.10.19</mockito.version>
         <maven.jacoco.plugin.version>0.7.4.201502262128</maven.jacoco.plugin.version>
         <maven.surefire.plugin.version>2.18.1</maven.surefire.plugin.version>
         <maven.findbugs.plugin.version>3.0.0</maven.findbugs.plugin.version>
         <maven.checkstyle.plugin.version>2.12</maven.checkstyle.plugin.version>
+        <log4j.version>1.2.12</log4j.version>
     </properties>
 
     <build>
@@ -127,6 +128,23 @@
                     </archive>
                 </configuration>
             </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>${maven.surefire.plugin.version}</version>
+                <configuration combine.self="override">
+                    <redirectTestOutputToFile>true</redirectTestOutputToFile>
+                    <runOrder>failedfirst</runOrder>
+                    <argLine>
+                        -Xms128m -Xmx1G -XX:MaxPermSize=128M
+                        -Dhazelcast.phone.home.enabled=false
+                        -Dhazelcast.mancenter.enabled=false
+                        -Dhazelcast.logging.type=none
+                        -Dhazelcast.test.use.network=false
+                    </argLine>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
 
@@ -155,6 +173,13 @@
             <artifactId>mockito-all</artifactId>
             <version>${mockito.version}</version>
             <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>log4j</groupId>
+            <artifactId>log4j</artifactId>
+            <version>${log4j.version}</version>
+            <scope>test</scope>
+            <optional>true</optional>
         </dependency>
     </dependencies>
     <profiles>
@@ -270,6 +295,32 @@
                 </plugin>
             </plugins>
         </build>
+
     </profile>
+        <profile>
+            <id>master</id>
+            <properties>
+                <hazelcast.version>3.7-SNAPSHOT</hazelcast.version>
+            </properties>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-surefire-plugin</artifactId>
+                        <version>${maven.surefire.plugin.version}</version>
+                        <configuration combine.self="override">
+                            <parallel>none</parallel>
+                            <redirectTestOutputToFile>true</redirectTestOutputToFile>
+                            <argLine>-Xms128m -Xmx1G -XX:MaxPermSize=128M
+                                -Dhazelcast.phone.home.enabled=false
+                                -Dhazelcast.mancenter.enabled=false
+                                -Dhazelcast.logging.type=none
+                                -Dhazelcast.test.use.network=true
+                            </argLine>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
 </profiles>
 </project>
